# vectorspace

./: .gitignore  CLAUDE.md  CUCUMBER_IMPROVEMENTS.md  DEPLOYMENT-SIMPLE.md  DEPLOYMENT.md  FEATURES-CORPUS.md  LOCAL_SETUP.md  README.md  app.py  cucumber.config.js  deploy.sh  docker-compose.dev.yml  final_roundtrip_test.py  implementation_plan.md  nixpacks.toml  railway-build.sh  railway-corpus.json  railway.toml  simple_pg_test.py  test_mock_hn_recommendations.md  test_postgres_roundtrip.py  test_scroll_update_fix.py
backend/: .dockerignore  .env.example  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  RAILWAY_SETUP.md  README.md  create_test_user.py  debug_scroll_handler.py  main.py  migrate.py  populate_vector_db.py  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.txt  scroll_update_test.html  seed_conversations.py  seed_database.py  server_logs.txt  simple_scroll_test.py  test_debug_response.py  test_final_scroll_update.py  test_logging_scroll.py  test_message_routing.py  test_scroll_direct.py  test_scroll_with_auth.py  test_search.py  websocket_test.html
backend/app/: auth.py  database.py  main.py  models.py
backend/app/models/: __init__.py  collaboration.py  core.py  discovery.py
backend/app/routers/: admin.py  auth.py  collaboration.py  conversation.py  corpus.py  curation.py  human_chat.py  notifications.py  search.py  users.py  websocket.py
backend/app/schemas/: auth.py  collaboration.py  conversation.py  social.py  user.py
backend/app/services/: ai_service.py  background_tasks.py  corpus_service.py  heartbeat_manager.py  image_service.py  pii_filter.py  presence_manager.py  presence_metrics.py  redis_presence_manager.py  summary_service.py  throttled_presence_manager.py  title_service.py  user_service.py  vector_service.py  websocket_manager.py
backend/tests/: conftest.py  test_ai_integration.py  test_auth.py  test_background_tasks.py  test_conversation_api.py  test_corpus_integration.py  test_curation_api.py  test_embedding_integration.py  test_follow_api.py  test_models.py  test_neighboring_chats_update.py  test_openai_connection.py  test_pii_filter.py  test_presence_broadcasting.py  test_profile_images.py  test_scroll_position_broadcasting.py  test_search_api.py  test_semantic_similarity.py  test_setup.py  test_simple_presence.py  test_social_models.py  test_summary_regeneration.py  test_summary_service.py  test_summary_title_integration.py  test_title_service.py  test_token_counting.py  test_users_api.py  test_vector_service.py  test_websocket.py  test_websocket_enhanced.py  test_websocket_presence.py
corpus/: .env.example  .env.production  DEPLOYMENT.md  Dockerfile  SETUP.md  main.py  pyproject.toml  railway.json  railway.toml  readme.md  start.sh  test_corpus.py
corpus/app/: __init__.py  dependencies.py  main.py
corpus/chroma_db/: chroma.sqlite3
frontend/: .babelrc.js  (+19 more)
(+193 files in other folders)
